--- a/components/HomeSection/HomeSection.module.css
+++ b/components/HomeSection/HomeSection.module.css
@@ -105,6 +105,7 @@
 @media screen and (max-width: 990px) {
 
     .homeContainer{
+        padding-top: 15%;
         flex-wrap: wrap;
     }
 
