--- a/components/PortfolioSection/PortfolioSection.module.css
+++ b/components/PortfolioSection/PortfolioSection.module.css
@@ -38,3 +38,10 @@
     -ms-user-select: none; /* IE10+/Edge */
     user-select: none;
 }
+
+@media screen and (max-width: 990px) {
+
+    #portfolioSectionTitle {
+        padding-top: 25%;
+    }
+}
