--- a/components/SkillsSection/Skills/Skills.module.css
+++ b/components/SkillsSection/Skills/Skills.module.css
@@ -98,6 +98,7 @@
     font-size: 2rem;
     padding: 1rem 1rem 1rem 1rem;
     cursor:default;
+    text-align: center;
 }
 
 .skillTitle {
