--- a/components/SkillsSection/SkillsSection.module.css
+++ b/components/SkillsSection/SkillsSection.module.css
@@ -73,4 +73,8 @@
     .contentSectionContainer {
         height: fit-content;
     }
+
+    .contentSectionContainer > h1 {
+        margin-top: 20%;
+    }
 }
